--- a/ui/app/styles/core/bulma-classes.css
+++ b/ui/app/styles/core/bulma-classes.css
@@ -369,6 +369,10 @@ fieldset[disabled] .select select:-ms-input-placeholder,
   margin-top: -0.75rem;
 }
 
+.columns:last-child {
+  margin-bottom: -0.75rem;
+}
+
 .columns.is-gapless {
   margin-left: 0;
   margin-right: 0;
